...
      }}>
      <Tabs.Screen
        name="index"
        options={{
          title: 'Home',
          tabBarLabel: 'Home',
          tabBarButtonTestID: 'tab-home',
          tabBarIcon: ({ color }) => (
            <Image
              source={require('@/assets/images/tabIcons/home.png')}
              style={[styles.icon, { tintColor: color }]}
            />
          ),
...
      />
      <Tabs.Screen
        name="goals"
        options={{
          title: 'Goals',
          tabBarLabel: 'Goals',
          tabBarButtonTestID: 'tab-goals',
          tabBarIcon: ({ color }) => (
            <Image
              source={require('@/assets/images/tabIcons/goals.png')}
              style={[styles.icon, { tintColor: color }]}
            />
          ),
...
